array for alphabets

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
     <title>Pshychic Game</title>
 </head>
 
@@ -13,8 +15,8 @@
         <h1>Are you Pshychic?</h1>
 
         <h2>I'm thinking of a letter...</h2>
-        <p>You have 9 tries to guess the letter I'm thinking of.<br>
-            Select a letter key from a to z to play!</p>
+        <p>You have 9 tries to guess the letter I'm thinking of.</p>
+        <p>Select a letter key from a to z to play!</p>
         <p id="userchoice-text"></p>
         <p id="wins-text"></p>
         <p id="losses-text"></p>
