--- a/index.html
+++ b/index.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <!-- CSS -->
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <title>Pshychic Game</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div>
-        <h1>Are you Pshychic?</h1>
+      <h1>Are you Pshychic?</h1>
 
-        <h2>I'm thinking of a letter...</h2>
-        <p>You have 9 tries to guess the letter I'm thinking of.</p>
-        <p>Select a letter key from a to z to play!</p>
-        <p id="userchoice-text"></p>
-        <p id="wins-text"></p>
-        <p id="losses-text"></p>
-        <p id="guessesleft-text"></p>
-        <p id="guessedsofar-text"></p>
+      <h2>I'm thinking of a letter...</h2>
+      <p>You have 9 tries to guess the letter I'm thinking of.</p>
+      <p>Select a letter key from a to z to play!</p>
+      <p id="userchoice-text"></p>
+      <p id="wins-text"></p>
+      <p id="losses-text"></p>
+      <p id="guessesleft-text"></p>
+      <p id="guessedsofar-text"></p>
     </div>
 
     <!--JAVASCRIPT LINK-->
     <script src="assets/javascript/game.js"></script>
-</body>
-
+  </body>
 </html>
